<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="354dp"
        android:layout_height="235dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Clearbtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clearbtn"
                android:text="@string/Clear"
                app:backgroundTint="#F44336" />

            <Button
                android:id="@+id/parbtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="parbtn"
                android:text="@string/parenthesis" />

            <Button
                android:id="@+id/expobtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="expobtn"
                android:text="@string/exponent" />

            <Button
                android:id="@+id/divbtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="divbtn"
                android:text="@string/divide" />
        </TableRow>

        <TableRow
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/ninebtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ninebtn"
                android:text="@string/nine" />

            <Button
                android:id="@+id/eightbtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="eightbtn"
                android:text="@string/eight" />

            <Button
                android:id="@+id/sevenbtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sevenbtn"
                android:text="@string/seven" />

            <Button
                android:id="@+id/multibtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="multibtn"
                android:text="@string/multiply" />
        </TableRow>

        <TableRow
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sixbtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="sixbtn"
                android:text="@string/six" />

            <Button
                android:id="@+id/fivebtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fivebtn"
                android:text="@string/five" />

            <Button
                android:id="@+id/fourbtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="fourbtn"
                android:text="@string/four" />

            <Button
                android:id="@+id/minusbtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="minusbtn"
                android:text="@string/minus" />
        </TableRow>

        <TableRow
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/threebtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="threebtn"
                android:text="@string/three" />

            <Button
                android:id="@+id/twobtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="twobtn"
                android:text="@string/two" />

            <Button
                android:id="@+id/onebtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onebtn"
                android:text="@string/one" />

            <Button
                android:id="@+id/plusbtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="plusbtn"
                android:text="@string/plus" />

        </TableRow>

        <TableRow
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusminusbtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="plusminusbtn"
                android:text="@string/plusorminus" />

            <Button
                android:id="@+id/zerobtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="zerobtn"
                android:text="@string/zero" />

            <Button
                android:id="@+id/pointbtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pointbtn"
                android:text="@string/point" />

            <Button
                android:id="@+id/equalbtn"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="equalbtn"
                android:text="@string/equal"
                app:backgroundTint="#4CAF50" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/backbtn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="backbtn"
        android:text="@string/backspace"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:strokeColor="#FFFFFF" />

    <EditText
        android:id="@+id/input"
        android:layout_width="397dp"
        android:layout_height="214dp"
        android:layout_marginStart="7dp"
        android:autofillHints="username"

        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>